--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/skb1129/hosting-full-stack.git"
+    "url": "git+https://github.com/Hadeer-Hesham-Fahmy/hosting-full-stack"
   },
-  "author": "Surya Kant Bansal <suryakantbansal97@gmail.com>"
+  
 }
